# circuit_simulator

./: .gitignore  CMakeLists.txt  run.sh
scripts/: format_source_code.sh
src/: CMakeLists.txt  main.cpp
src/matrix/: BJT.cpp  BJT.h  CMakeLists.txt  MOSFET.cpp  MOSFET.h  device.h  diode.cpp  diode.h  matrix.cpp  matrix.h  nonlinear.cpp  nonlinear.h
src/netlist/: CMakeLists.txt
src/parser/: CMakeLists.txt  adder.cpp  adder.h  edge.h  parser.cpp  parser.h
tests/data/: BJT_circuit.sp  BJT_circuit1.sp  MOSFET_circuit.sp  MOSFET_circuit1.sp  diode_circuit.sp  diode_circuit1.sp  diode_circuit2.sp  diode_circuit3.sp  example.sp  example1.sp  linear_circuit.sp  mix_circuit.sp
tests/ut/: CMakeLists.txt  example.cpp
